integrated home page and basic user auth setup

--- a/homePage.html
+++ b/homePage.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="homePage.css" />
+        <link rel="stylesheet" type="text/css" href="public/stylesheets/homePage.css" />
     </head>
     <body>
     <div style="text-align: center;  "> <img src="C:\Users\zakay\OneDrive\תמונות\flight-search-726x400.jpg" style="width: 200px;height: 110px;border-top: 400px;"><label style= "color:blue; font-size: 80px;"> EL </label>  <label style="color: rgb(0, 225, 255);font-size: 80px;"> AL </label>  <label style="color: rgb(128, 128, 128); font-size: 80px;"> AIRLINES </label></div>
